src/test/ui/consts/issue-36163.stderr
error[E0391]: cycle detected when simplifying constant for the type system `Foo::B::{constant#0}`
  --> $DIR/issue-36163.rs:4:9
   |
LL |     B = A,
   |         ^
   |
note: ...which requires simplifying constant for the type system `Foo::B::{constant#0}`...
  --> $DIR/issue-36163.rs:4:9
   |
LL |     B = A,
   |         ^
note: ...which requires const-evaluating + checking `Foo::B::{constant#0}`...
  --> $DIR/issue-36163.rs:4:9
   |
LL |     B = A,
   |         ^
   = note: ...which requires normalizing `A`...
note: ...which requires simplifying constant for the type system `A`...
  --> $DIR/issue-36163.rs:1:1
   |
LL | const A: isize = Foo::B as isize;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires simplifying constant for the type system `A`...
  --> $DIR/issue-36163.rs:1:1
   |
LL | const A: isize = Foo::B as isize;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `A`...
  --> $DIR/issue-36163.rs:1:1
   |
LL | const A: isize = Foo::B as isize;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which requires normalizing `A`...
   = note: ...which again requires simplifying constant for the type system `Foo::B::{constant#0}`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/issue-36163.rs:1:1
   |
LL | / const A: isize = Foo::B as isize;
LL | |
LL | | enum Foo {
LL | |     B = A,
LL | | }
LL | |
LL | | fn main() {}
   | |____________^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
